# Robotic_Arm_4_DOF

./: pick_place.py
scripts/: keyboard_control.py
src/roboticarm_desc/: package.xml  setup.cfg  setup.py
src/roboticarm_desc/config/: controllers.yaml
src/roboticarm_desc/launch/: display.launch.py  gazebo.launch
src/roboticarm_desc/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
src/roboticarm_desc/urdf/: robotic_arm.csv  robotic_arm.urdf
src/roboticarm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/roboticarm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  roboticarm_desc.ros2_control.xacro  roboticarm_desc.srdf  roboticarm_desc.urdf.xacro  ros2_controllers.yaml
src/roboticarm_moveit_config/launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/roboticarm_moveit_config/scripts/: auto_support.py  gripper_mover.py  joint_mover.py  pick_place.py  position_mover.py  scene_manager.py
